[gd_scene load_steps=22 format=3 uid="uid://bq85v41cdhuh2"]

[ext_resource type="Script" uid="uid://bc0kb7bs5wcs3" path="res://1Player_script/archer.gd" id="1_bp71f"]
[ext_resource type="Texture2D" uid="uid://bc4wuocpbn6su" path="res://FULL RPG ASSET/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Archer/Archer with shadows/Archer.png" id="2_bt5u3"]
[ext_resource type="PackedScene" uid="uid://dsdcsdvv2063l" path="res://Animation5+3/bar.tscn" id="3_tmupm"]
[ext_resource type="Texture2D" uid="uid://bkoy3wq2vosgy" path="res://Pic Level/Under-Photoroom.png" id="4_g143p"]
[ext_resource type="Texture2D" uid="uid://cm5kfx6r0bkps" path="res://Pic Level/Over-Photoroom.png" id="5_i50bv"]
[ext_resource type="Texture2D" uid="uid://dx08dcu3hstps" path="res://Pic Level/Process-Photoroom.png" id="6_x2xn7"]
[ext_resource type="Script" uid="uid://dle88wu7u6lgq" path="res://Pickup/lv_opition.gd" id="7_lkxed"]
[ext_resource type="AudioStream" uid="uid://ub36p72o7skq" path="res://Sound SFX game/level-up-2.mp3" id="8_2x32u"]
[ext_resource type="AudioStream" uid="uid://bj1e7vgov0g5l" path="res://Sound SFX game/attack_arrow.mp3" id="9_j17hh"]
[ext_resource type="AudioStream" uid="uid://clsfxbkmx0k0s" path="res://Sound SFX game/hurt-self.mp3" id="10_rhiif"]
[ext_resource type="AudioStream" uid="uid://ca4rb4fkvvxth" path="res://Sound SFX game/arrow-impact-87260.mp3" id="11_fbefc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nqmce"]
radius = 6.0
height = 16.0

[sub_resource type="Animation" id="Animation_nrx7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_od3fw"]
resource_name = "attack1"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_bxvgd"]
resource_name = "attack2"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_cfsc8"]
resource_name = "death"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_rtgnc"]
resource_name = "hurt"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_5x7qr"]
resource_name = "idle"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_yvnjr"]
resource_name = "walk"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bxvgd"]
_data = {
&"RESET": SubResource("Animation_nrx7j"),
&"attack1": SubResource("Animation_od3fw"),
&"attack2": SubResource("Animation_bxvgd"),
&"death": SubResource("Animation_cfsc8"),
&"hurt": SubResource("Animation_rtgnc"),
&"idle": SubResource("Animation_5x7qr"),
&"walk": SubResource("Animation_yvnjr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jet6f"]
radius = 50.0

[node name="Archer" type="CharacterBody2D" groups=["player"]]
collision_mask = 4
script = ExtResource("1_bp71f")
gfx_path = NodePath("Sprite2D")
anim_path = NodePath("AnimationPlayer")
area_path = NodePath("Area2D")
arrow_spawnR_path = NodePath("ArrowSpawnR")
arrow_spawnL_path = NodePath("ArrowSpawnL")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_nqmce")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bxvgd")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_bt5u3")
hframes = 12
vframes = 6

[node name="Area2D" type="Area2D" parent="." groups=["PlayerBody"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_nqmce")

[node name="ArrowSpawnR" type="Marker2D" parent="."]
position = Vector2(9, 0)

[node name="ArrowSpawnL" type="Marker2D" parent="."]
position = Vector2(-9, 0)

[node name="Bar" parent="." instance=ExtResource("3_tmupm")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.29, 2.29)

[node name="XP" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -213.0
offset_right = 160.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
max_value = 10.0
texture_under = ExtResource("4_g143p")
texture_over = ExtResource("5_i50bv")
texture_progress = ExtResource("6_x2xn7")

[node name="Level" type="Label" parent="XP"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 327.0
offset_top = 70.0
offset_right = 367.0
offset_bottom = 93.0
text = "Lv 1"

[node name="Lv_opition" type="VBoxContainer" parent="XP"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.167
anchor_right = 0.5
anchor_bottom = 1.167
offset_left = -19.0
offset_top = -20.060013
offset_right = 21.0
offset_bottom = 19.939987
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_lkxed")

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet"]
shape = SubResource("CircleShape2D_jet6f")

[node name="SFX_Lv_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2x32u")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_arrow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_j17hh")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_rhiif")
volume_db = -16.0
bus = &"SFX"

[node name="SFX_arrow_m2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fbefc")
volume_db = -16.0

[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
